# bridge

./: .gitignore  CLAUDE_AGENT.md  CLAUDE_CODE_INTEGRATION.md  DEVELOPMENT.md  README.md  TASKS_CREATED.md  TERMINAL_QUICK_VIEW_PLAN.md  limestone-theme.json  package.json  pnpm-lock.yaml  seed_bridge_dev.py  test-theme.json  theme-template.css  vite.config.ts  yerbapadre-bridge.rb
scripts/: create_quick_view_tasks.sql
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src/components/: BlockTaskModal.tsx  Clock.tsx  CommandPalette.tsx  Modal.tsx  NextTaskModal.tsx  Sidebar.tsx  StatusBadge.tsx  TaskListItem.tsx  TerminalSessionCard.tsx
src/components/ui/: tooltip.tsx
src/hooks/: index.ts  useFocus.ts  useKeyboardShortcuts.ts  usePreferences.ts  useProjects.ts  useTasks.ts  useTerminals.ts
src/lib/: api.ts  shortcuts.ts  theme.ts  utils.ts
src/stores/: focusStore.ts  index.ts  noteStore.ts  projectStore.ts  taskStore.ts  terminalStore.ts
src/types/: index.ts  notes.ts  project.ts  task.ts  terminal.ts  theme.ts  timer.ts  track.ts
src/views/: ActiveView.tsx  BoardView.tsx  NotesView.tsx  RetroView.tsx  SettingsView.tsx  TerminalsView.tsx  TrackColumn.tsx
src/views/board/: TaskCard.tsx  TrackColumn.tsx
src/views/settings/: AppearanceSettings.tsx  CustomizeSettings.tsx  KeyboardShortcutsSettings.tsx
website/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
website/src/: App.tsx  Boids.tsx  CellularAutomata.tsx  TerminalTyping.tsx
